updating freecodecamp profile link

--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/1-build-a-tribute-page/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/1-build-a-tribute-page/index.html
@@ -103,7 +103,7 @@
       </div>
   </div>
   <footer class="footer text-center text-light py-1">
-    <h5 class="font-weight-light">Written and coded by <a href="https://www.freecodecamp.org/portfolio/stefaniedev" target="_blank" class="text-warning">Stefanie Feltman</a>.</h5>
+    <h5 class="font-weight-light">Written and coded by <a href="https://www.freecodecamp.org/stefaniedev" target="_blank" class="text-warning">Stefanie Feltman</a>.</h5>
   </footer>
 </body>
 </html>
