--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/2-build-a-survey-form/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/2-build-a-survey-form/index.html
@@ -200,7 +200,7 @@
         </div>
     </div>
   <footer class="footer text-center text-light mb-4">
-    <h5 class="font-weight-light">Written and coded by <a href="https://www.freecodecamp.org/portfolio/stefaniedev" target="_blank" id="made">Stefanie Feltman</a>.</h5>
+    <h5 class="font-weight-light">Written and coded by <a href="https://www.freecodecamp.org/stefaniedev" target="_blank" id="made">Stefanie Feltman</a>.</h5>
   </footer>
 </body>
 </html>
