--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/3-build-a-product-landing-page/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/3-build-a-product-landing-page/index.html
@@ -4,9 +4,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <!-- bootstrap javascript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- bootstap 4.0.0 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- google font library -->
@@ -22,7 +19,7 @@
             <nav class="navbar navbar-expand-lg fixed-top" id="nav-bar">
                 <a class="navbar-brand">
                     <button disabled type="button" class="btn" id="logo">
-                        <img id="header-img" src="https://farm2.staticflickr.com/1724/42783930141_7b124a9675_o.png">
+                        <img id="header-img" src="images/snake-diet-logo-icon.png" onerror="this.onerror=null;this.src='https://farm2.staticflickr.com/1724/42783930141_7b124a9675_o.png'">
                     </button>
                 </a>
                 <ul class="nav navbar-nav collapse navbar-collapse">
@@ -47,11 +44,10 @@
                 <h1 class="display-1 text-center" id="fatty">HEY FATTY!</h1>
             </div>
             <div class="container-fluid">
-                <img id="cole" src="https://farm1.staticflickr.com/884/42785127721_5984ae1ef8_o.png" alt="Snake Diet founder Cole Robinson">
+                <img id="cole" src="images/mcsnake-diet.png" onerror="this.onerror=null;this.src='https://farm1.staticflickr.com/884/42785127721_5984ae1ef8_o.png'" alt="Snake Diet founder Cole Robinson">
             </div>
             <div class="container-fluid text-center subTextImg">
-                HEARD ABOUT THE <img class="subSnakeDiet" src="https://live.staticflickr.com/888/42733905092_94ff684aae_o.png" alt="snake-diet-logo-text">?
-                <!-- <div id="scStart"></div> -->
+                HEARD ABOUT THE <img class="subSnakeDiet" src="images/snake-diet-logo-text.png" onerror="this.onerror=null;this.src='https://live.staticflickr.com/888/42733905092_94ff684aae_o.png'" alt="snake-diet-logo-text">?
             </div>
         </div>
         <div id="scStart">
@@ -64,13 +60,10 @@
                     <iframe id="video" src="https://www.youtube.com/embed/t8794X4I8nk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
                 <div class="container-fluid">
-                <!-- <div class="card-body"> -->
-                    <!-- <div id="scRecipe"></div> -->
                     <p class="text-center" id="subTextVid">
                     ⚠️ WARNING: STRONG LANGUAGE ⚠️</p>
                 </div>
                 <div class="container-fluid navPad"></div>
-                <!-- <div id="scRecipe"></div> -->
             </div>
         </div>
         <div id="scRecipe">
@@ -85,7 +78,7 @@
                                 <div class="card">
                                     <div class="card cardImg">
                                         <a href="https://www.youtube.com/watch?v=1onQ0nxgWFM" target="_blank">
-                                            <img class="card-img-top imgCard" src="https://farm1.staticflickr.com/880/42219879994_1eb2b46ec2_o.jpg" alt="Card image">
+                                            <img class="card-img-top imgCard" src="images/snake-juice-basic.jpg" onerror="this.onerror=null;this.src='https://farm1.staticflickr.com/880/42219879994_1eb2b46ec2_o.jpg'" alt="Card image">
                                             <div class="card-img-overlay recipeOverlay">
                                                 <h5 class="card-title titleRec">BASIC</h5>
                                             </div>
@@ -104,7 +97,7 @@
                                 <div class="card">
                                     <div class="card cardImg">
                                         <a href="https://www.youtube.com/watch?v=AgTGAPz-1M0" target="_blank">
-                                            <img class="card-img-top imgCard" src="https://farm1.staticflickr.com/895/42077446254_be10850e95_o.jpg" alt="Card image">
+                                            <img class="card-img-top imgCard" src="images/snake-juice-adv.jpeg" onerror="this.onerror=null;this.src='https://farm1.staticflickr.com/895/42077446254_be10850e95_o.jpg'" alt="Card image">
                                             <div class="card-img-overlay recipeOverlay">
                                                 <h5 class="card-title titleRec">ADVANCED</h5>
                                             </div>
@@ -123,7 +116,7 @@
                             <div class="card">
                                 <div class="card cardImg">
                                     <a href="https://www.youtube.com/watch?v=HTitvqRRzr8" target="_blank">
-                                        <img class="card-img-top imgCard" src="https://farm2.staticflickr.com/1785/42219879694_bb2cde770e_o.jpg" alt="Card image">
+                                        <img class="card-img-top imgCard" src="images/snake-juice-dry.jpeg" onerror="this.onerror=null;this.src='https://farm2.staticflickr.com/1785/42219879694_bb2cde770e_o.jpg'" alt="Card image">
                                         <div class="card-img-overlay recipeOverlay">
                                             <h5 class="card-title titleRec">DRY</h5>
                                         </div>
@@ -136,7 +129,6 @@
                                 <p class="card-text font-weight-light">Prepare the body for food</p>
                                 <h6 class="card-text cTitle font-weight-bold">SLOW READAPTATION</h6>
                                 <p class="card-text font-weight-light">Safely break a dry fast by slowly reintroducing a healthful electrolyte drink, and then small portions of whole foods, back into your diet.</p>
-                                <!-- <div id="scSubscribe"></div> -->
                             </div>
                         </div>
                     </div>
@@ -160,10 +152,10 @@
             </div>
             <div class="col-xl">
                 <div class="container-fluid text-center" id="iconBox">
-                    <a class="icon-click" href="https://www.youtube.com/channel/UC_yUeH8TsG5pxqvkOxBtsFA" target="_blank"><img class="iconSocial" src="https://farm2.staticflickr.com/1724/40970890380_03497116f5_o.png"></a>
-                    <a class="icon-click" href="https://www.instagram.com/snake_diet_wizard/" target="_blank"><img class="iconSocial" src="https://farm2.staticflickr.com/1739/27913406547_5e5ed9a376_o.png"></a>
-                    <a class="icon-click" href="https://www.facebook.com/snakediet/" target="_blank"><img class="iconSocial" src="https://farm1.staticflickr.com/879/42064814964_52f9efd8a2_o.png"></a>
-                    <a class="icon-click" href="https://twitter.com/SnakeDiet" target="_blank"><img class="iconSocial" src="https://farm2.staticflickr.com/1735/27913406467_3cfdd144eb_o.png"></a>
+                    <a class="icon-click" href="https://www.youtube.com/channel/UC_yUeH8TsG5pxqvkOxBtsFA" target="_blank"><img class="iconSocial" src="icons/iconmonstr-youtube-6-240.png" onerror="this.onerror=null;this.src='https://farm2.staticflickr.com/1724/40970890380_03497116f5_o.png'"></a>
+                    <a class="icon-click" href="https://www.instagram.com/snake_diet_wizard/" target="_blank"><img class="iconSocial" src="icons/iconmonstr-instagram-6-240.png" onerror="this.onerror=null;this.src='https://farm2.staticflickr.com/1739/27913406547_5e5ed9a376_o.png'"></a>
+                    <a class="icon-click" href="https://www.facebook.com/snakediet/" target="_blank"><img class="iconSocial" src="icons/iconmonstr-facebook-6-240.png" onerror="this.onerror=null;this.src='https://farm1.staticflickr.com/879/42064814964_52f9efd8a2_o.png'"></a>
+                    <a class="icon-click" href="https://twitter.com/SnakeDiet" target="_blank"><img class="iconSocial" src="icons/iconmonstr-twitter-1-240.png" onerror="this.onerror=null;this.src='https://farm2.staticflickr.com/1735/27913406467_3cfdd144eb_o.png'"></a>
                 </div>
             </div>
             <div class="container-fluid navPad"></div>
@@ -173,10 +165,10 @@
                 <p>Inspired by Cole Robinson's</p>
             </div>
             <div class="col" id="snakeFoot">
-                <a href="https://www.snakediet.com/" target="_blank"><img class="snakeDiet" src="https://farm2.staticflickr.com/1798/42943147941_bf7175d71a_o.png" alt="snake-diƒet-logo-text-white"></a>
+                <a href="https://www.snakediet.com/" target="_blank"><img class="snakeDiet" src="iamges/snake-diet-logo-text-white.png" onerror="this.onerror=null;this.src='https://farm2.staticflickr.com/1798/42943147941_bf7175d71a_o.png'" alt="snake-diƒet-logo-text-white"></a>
             </div>
             <div class="col" id="rightFoot">
-                <p>Coded with<span class="oi oi-heart btn-sm" aria-hidden="true"></span>by <a class="made" href="https://www.freecodecamp.org/portfolio/stefaniedev" target="_blank">Stefanie Feltman</a></p>
+                <p>Coded with<span class="oi oi-heart btn-sm" aria-hidden="true"></span>by <a class="made" href="https://www.freecodecamp.org/stefaniedev" target="_blank">Stefanie Feltman</a></p>
             </div>
         </footer>
 </div>
